--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -322,9 +322,9 @@ DYNAMICCOIN_RC = qt/res/dynamiccoin-qt-res.rc
 DYNAMICCOIN_QT_INCLUDES = -I$(builddir)/qt -I$(srcdir)/qt -I$(srcdir)/qt/forms \
   -I$(builddir)/qt/forms
 
-qt_libdynamiccoinqt_a_CPPFLAGS = $(DYNAMICCOIN_INCLUDES) $(DYNAMICCOIN_QT_INCLUDES) \
+qt_libdynamiccoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMICCOIN_INCLUDES) $(DYNAMICCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(QT_DBUS_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
-qt_libdynamiccoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+qt_libdynamiccoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 
 qt_libdynamiccoinqt_a_SOURCES = $(DYNAMICCOIN_QT_CPP) $(DYNAMICCOIN_QT_H) $(QT_FORMS_UI) \
   $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(PROTOBUF_PROTO) $(RES_ICONS) $(RES_IMAGES) $(RES_MOVIES)
@@ -346,9 +346,9 @@ $(QT_MOC): $(PROTOBUF_H)
 $(QT_MOC_CPP): $(PROTOBUF_H)
 
 # dynamiccoin-qt binary #
-qt_dynamiccoin_qt_CPPFLAGS = $(DYNAMICCOIN_INCLUDES) $(DYNAMICCOIN_QT_INCLUDES) \
+qt_dynamiccoin_qt_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMICCOIN_INCLUDES) $(DYNAMICCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
-qt_libdynamiccoinqt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+qt_libdynamiccoinqt_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 
 qt_dynamiccoin_qt_SOURCES = qt/dynamiccoin.cpp
 if TARGET_DARWIN
