--- a/src/Makefile.qttest.include
+++ b/src/Makefile.qttest.include
@@ -34,6 +34,7 @@ qt_test_test_dynamiccoin_qt_LDADD += $(LIBDYNAMICCOIN_CLI) $(LIBDYNAMICCOIN_COMM
   $(LIBMEMENV) $(BOOST_LIBS) $(QT_DBUS_LIBS) $(QT_TEST_LIBS) $(QT_LIBS) \
   $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(CURLPP_LIBS) $(LIBSECP256K1)
 qt_test_test_dynamiccoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+qt_test_test_dynamiccoin_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
 CLEAN_DYNAMICCOIN_QT_TEST = $(TEST_QT_MOC_CPP) qt/test/*.gcda qt/test/*.gcno
 
