--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ $(LIBLEVELDB) $(LIBMEMENV):
 endif
 
 DYNAMICCOIN_CONFIG_INCLUDES=-I$(builddir)/config
-DYNAMICCOIN_INCLUDES=-I$(builddir) -I$(builddir)/obj $(BOOST_CPPFLAGS) $(LEVELDB_CPPFLAGS) $(CRYPTO_CFLAGS) $(SSL_CFLAGS)
+DYNAMICCOIN_INCLUDES=-I$(builddir) -I$(builddir)/obj $(BOOST_CPPFLAGS) $(LEVELDB_CPPFLAGS) $(CRYPTO_CFLAGS) $(SSL_CFLAGS) $(CURLPP_CFLAGS)
 
 DYNAMICCOIN_INCLUDES += -I$(srcdir)/secp256k1/include
 
@@ -313,7 +313,7 @@ if TARGET_WINDOWS
 dynamiccoind_SOURCES += dynamiccoind-res.rc
 endif
 
-dynamiccoind_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS)
+dynamiccoind_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(CURLPP_LIBS)
 dynamiccoind_CPPFLAGS = $(DYNAMICCOIN_INCLUDES)
 dynamiccoind_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 
