Specify missing curlpp dependencies

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -360,7 +360,7 @@ if ENABLE_WALLET
 qt_dynamiccoin_qt_LDADD += $(LIBDYNAMICCOIN_WALLET)
 endif
 qt_dynamiccoin_qt_LDADD += $(LIBDYNAMICCOIN_CLI) $(LIBDYNAMICCOIN_COMMON) $(LIBDYNAMICCOIN_UTIL) $(LIBDYNAMICCOIN_CRYPTO) $(LIBDYNAMICCOIN_UNIVALUE) $(LIBLEVELDB) $(LIBMEMENV) \
-  $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1)
+  $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) $(CURLPP_LIBS)
 qt_dynamiccoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 qt_dynamiccoin_qt_LIBTOOLFLAGS = --tag CXX
 
