--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -81,14 +81,14 @@ DYNAMICCOIN_TESTS += \
 endif
 
 test_test_dynamiccoin_SOURCES = $(DYNAMICCOIN_TESTS) $(JSON_TEST_FILES) $(RAW_TEST_FILES)
-test_test_dynamiccoin_CPPFLAGS = $(DYNAMICCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS)
+test_test_dynamiccoin_CPPFLAGS = $(DYNAMICCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS) $(CURLPP_CFLAGS)
 test_test_dynamiccoin_LDADD = $(LIBDYNAMICCOIN_SERVER) $(LIBDYNAMICCOIN_CLI) $(LIBDYNAMICCOIN_COMMON) $(LIBDYNAMICCOIN_UTIL) $(LIBDYNAMICCOIN_CRYPTO) $(LIBDYNAMICCOIN_UNIVALUE) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB) $(LIBSECP256K1)
 if ENABLE_WALLET
 test_test_dynamiccoin_LDADD += $(LIBDYNAMICCOIN_WALLET)
 endif
 
-test_test_dynamiccoin_LDADD += $(LIBDYNAMICCOIN_CONSENSUS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS)
+test_test_dynamiccoin_LDADD += $(LIBDYNAMICCOIN_CONSENSUS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(CURLPP_LIBS)
 test_test_dynamiccoin_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -static
 
 nodist_test_test_dynamiccoin_SOURCES = $(GENERATED_TEST_FILES)
