--- a/share/setup.nsi.in
+++ b/share/setup.nsi.in
@@ -82,8 +82,9 @@ Section -Main SEC0000
     SetOutPath $INSTDIR\doc
     File /r @abs_top_srcdir@/doc\*.*
     SetOutPath $INSTDIR
-    File @abs_top_srcdir@/share/dynamiccoin.conf
     SetShellVarContext "current"
+    IfFileExists "$APPDATA\DynamicCoin\dynamiccoin.conf" +2 0
+    File @abs_top_srcdir@/share/dynamiccoin.conf
     SetOutPath "$APPDATA\DynamicCoin"
     WriteRegStr HKCU "${REGKEY}\Components" Main 1
 SectionEnd
