--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -81,10 +81,9 @@ DYNAMICCOIN_TESTS += \
 endif
 
 test_test_dynamiccoin_SOURCES = $(DYNAMICCOIN_TESTS) $(JSON_TEST_FILES) $(RAW_TEST_FILES)
-test_test_dynamiccoin_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMICCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS) $(CURLPP_CFLAGS)
+test_test_dynamiccoin_CPPFLAGS = $(DYNAMICCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS) $(CURLPP_CFLAGS)
 test_test_dynamiccoin_LDADD = $(LIBDYNAMICCOIN_SERVER) $(LIBDYNAMICCOIN_CLI) $(LIBDYNAMICCOIN_COMMON) $(LIBDYNAMICCOIN_UTIL) $(LIBDYNAMICCOIN_CRYPTO) $(LIBDYNAMICCOIN_UNIVALUE) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB) $(LIBSECP256K1)
-test_test_dynamiccoin_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 if ENABLE_WALLET
 test_test_dynamiccoin_LDADD += $(LIBDYNAMICCOIN_WALLET)
 endif
